[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Textures/Characters/playerShip2_red.png" type="Texture" id=2]
[ext_resource path="res://Sound/FX/ship_move.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/FX/ship_move_loop.wav" type="AudioStream" id=4]
[ext_resource path="res://Sound/FX/ship_move_rumble.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/FX/ship_boost.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound/FX/laser_shot.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 50.666

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 10.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 3.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 30.0
scale_random = 1.0
color = Color( 0.167969, 0.160751, 0.160751, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Initial Velocity", "Scale" ]

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 20.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 8.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 20.0
scale_random = 1.0
color = Color( 0.996094, 0.813278, 0.618668, 0.232039 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Gravity", "Initial Velocity" ]

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 6.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 1.55544e-43
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 15.0
scale_random = 1.0
color = Color( 0.385864, 0.686712, 0.90625, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Initial Velocity", "Scale" ]

[sub_resource type="AudioStreamRandomPitch" id=5]

audio_stream = ExtResource( 3 )
random_pitch = 1.1

[sub_resource type="AudioStreamRandomPitch" id=6]

audio_stream = ExtResource( 6 )
random_pitch = 1.1

[sub_resource type="AudioStreamRandomPitch" id=7]

audio_stream = ExtResource( 7 )
random_pitch = 1.1

[node name="player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
thrust = 300
max_spd = 6
turn_spd = 2.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="smoke" type="Particles2D" parent="." index="1"]

modulate = Color( 1, 1, 1, 0.303843 )
position = Vector2( -30, 0 )
rotation = 1.5708
emitting = false
amount = 600
lifetime = 4.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 2 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time" ]

[node name="fire" type="Particles2D" parent="." index="2"]

modulate = Color( 1, 1, 1, 0.303843 )
position = Vector2( -30, 0 )
rotation = 1.5708
emitting = false
amount = 300
lifetime = 2.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time" ]

[node name="boost" type="Particles2D" parent="." index="3"]

modulate = Color( 1, 1, 1, 0.303843 )
position = Vector2( -30, 0 )
rotation = 1.5708
emitting = false
amount = 700
lifetime = 3.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 4 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material" ]

[node name="Sprite" type="Sprite" parent="." index="4"]

rotation = 1.5708
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.05
one_shot = true
autostart = false

[node name="Tween" type="Tween" parent="." index="6"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="RayCast2D" type="RayCast2D" parent="." index="7"]

enabled = false
exclude_parent = true
cast_to = Vector2( 600, 0 )
collision_mask = 1

[node name="sounds" type="Node2D" parent="." index="8"]

[node name="thrust_off" type="AudioStreamPlayer" parent="sounds" index="0"]

stream = SubResource( 5 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="move_loop" type="AudioStreamPlayer" parent="sounds" index="1"]

stream = ExtResource( 4 )
volume_db = -12.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="thrust_rumble" type="AudioStreamPlayer" parent="sounds" index="2"]

stream = ExtResource( 5 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="boost" type="AudioStreamPlayer" parent="sounds" index="3"]

stream = SubResource( 6 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="laser" type="AudioStreamPlayer" parent="sounds" index="4"]

stream = SubResource( 7 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Camera2D" type="Camera2D" parent="." index="9"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 4, 4 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.4
drag_margin_top = 0.4
drag_margin_right = 0.4
drag_margin_bottom = 0.4
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Smoothing" ]

[connection signal="timeout" from="Timer" to="." method="fire_cooldown"]


